// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlashAlert /> Snaphot must match flashAlertDefault 1`] = `
<div
  className="p-4"
>
  <div
    className="flash"
  >
    Flash message goes here.
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match flashError 1`] = `
<div
  className="p-4"
>
  <div
    className="flash flash-error"
  >
    Flash message goes here.
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match flashIcon 1`] = `
<div
  className="p-4"
>
  <div
    className="flash"
  >
    <span
      className="mr-3"
    >
      <svg
        aria-hidden="true"
        className="octicon"
        height={16}
        role="img"
        style={
          Object {
            "display": "inline-block",
            "fill": "currentColor",
            "userSelect": "none",
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8.893 1.5c-.183-.31-.52-.5-.887-.5s-.703.19-.886.5L.138 13.499a.98.98 0 0 0 0 1.001c.193.31.53.501.886.501h13.964c.367 0 .704-.19.877-.5a1.03 1.03 0 0 0 .01-1.002L8.893 1.5zm.133 11.497H6.987v-2.003h2.039v2.003zm0-3.004H6.987V5.987h2.039v4.006z"
          fillRule="evenodd"
        />
      </svg>
    </span>
    Flash message with an icon goes here.
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match flashMessages 1`] = `
<div
  className="p-4"
>
  <div
    className="flash-messages"
  >
    <div
      className="flash"
    >
      Flash message goes here.
    </div>
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match flashSuccess 1`] = `
<div
  className="p-4"
>
  <div
    className="flash flash-success"
  >
    Flash message goes here.
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match flashWarn 1`] = `
<div
  className="p-4"
>
  <div
    className="flash flash-warn"
  >
    Flash message goes here.
  </div>
</div>
`;

exports[`<FlashAlert /> Snaphot must match multipleParagraphs 1`] = `
<div
  className="p-4"
>
  <div
    className="flash"
  >
    <p>
      This is a longer flash message in it's own paragraph. It ends up looking something like this. If we keep adding more text, it'll eventually wrap to a new line.
    </p>
    <p>
      And this is another paragraph.
    </p>
  </div>
</div>
`;
